contact form styling

--- a/index.html
+++ b/index.html
@@ -309,12 +309,12 @@
 <div class="form-group" style="margin-bottom:0px;margin-top:20px;">
   <div class="col-md-6 inputGroupContainer" style="margin-bottom:15px;">
   <div class="input-group" style="width:100%;">
-  <input name="name" placeholder="Name" class="form-control" style="width:100%;" type="text">
+  <input name="name" placeholder="Name" class="form-control" style="width:100%;border-color:#333;border-width:2px;height:40px;border-radius:4px;" type="text">
     </div>
   </div>
     <div class="col-md-6 inputGroupContainer" style="margin-bottom:15px;">
     <div class="input-group" style="width:100%;">
-  <input name="email" placeholder="E-Mail" class="form-control" style="width:100%;"  type="text">
+  <input name="email" placeholder="E-Mail" class="form-control" style="width:100%;border-color:#333;border-width:2px;height:40px;border-radius:4px;"  type="text">
     </div>
   </div>
 </div>
@@ -325,13 +325,13 @@
 <div class="form-group" style="margin-bottom:0px;">
     <div class="col-md-6 inputGroupContainer" style="margin-bottom:15px;">
     <div class="input-group" style="width:100%;">
-  <input name="productname" placeholder="Business/Product Name" class="form-control" type="text">
+  <input name="productname" placeholder="Business/Product Name" style="width:100%;border-color:#333;border-width:2px;height:40px;border-radius:4px;" class="form-control" type="text">
     </div>
   </div>
 
     <div class="col-md-6 inputGroupContainer" style="margin-bottom:15px;">
     <div class="input-group" style="width:100%;">
-  <input name="productwebsite" placeholder="Business/Product Website" class="form-control"type="text">
+  <input name="productwebsite" placeholder="Business/Product Website" style="width:100%;border-color:#333;border-width:2px;height:40px;border-radius:4px;" class="form-control"type="text">
     </div>
   </div>
 </div>
