--- a/index.html
+++ b/index.html
@@ -212,21 +212,62 @@
         </div>
         <div class="col-md-4">
         <h1>Hi, I'm <strong>Daniel Pape</strong>.</h1>
-        <h2>I'm a product designer and front end developer who releases apps on the App Store. I'm based in London, England</h2>
+        <h2>I'm a product designer and front end developer who creates engaging iOS apps. I'm based in London, England</h2>
         <!-- <p>I design graphics and user interfaces and then turn them into code. Based in London, England.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">View Work</a></p> -->
         </div>
         <div class="col-md-1">
         </div>
         <div class="col-md-7">
-        <h3>Quick Links</h3>
+        <!-- <h3>Quick Links</h3> -->
         <p style="margin-top:20px;"><strong>Apps</strong> <a href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8#">Eve Alarm</a> &#149; <a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8">Mapgrounds</a> &#149; <a href="https://itunes.apple.com/us/app/progress-1000-by-london-evening/id931391607?mt=8">Progress 1000</a> &#149; <a href="https://itunes.apple.com/gb/app/copywriter/id670760844?mt=8">CopyWriter</a></p>
-        <p><strong>About</strong> <a href="#whatIdo">What I do</a> &#149; <a href="#work">My Work</a></p>
+        <p><strong>About</strong> <a href="#work">My Work</a> &#149; <a href="#whatIdo">What I do</a></p>
         <p><strong>Contact</strong> <a href="#contact">Email</a> &#149; <a href="https://twitter.com/danielpape" target="_blank">Twitter</a> &#149; <a href="https://github.com/danielpape" target="_blank">GitHub</a></p>
 
         </div>
       </div>
     </div>
+    <section class="topBottomMargins" id="work">
+      <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-12">
+          <div class="topborder" style="padding-bottom:2em;">
+          <h1><strong>Work</strong></h1>
+          <p>I have designed and coded user interfaces and graphics for many apps on the iOS app store, and had the pleasure of being featured in Apple's human curated 'New &amp; Noteworthy' section. To see all of my apps search the app store for <strong><i>Daniel Pape</i></strong></p>
+        </div>
+        <div class="col-md-6 backgroundColor">
+          <img src="img/eveAlarm.png" style="width:100%">
+        </div>
+        <div class="col-md-6">
+          <h2>Eve Alarm</h2>
+          <p>Eve Alarm is an alarm app that uses a custom clickwheel control to interact with the sunset-based user-interface. It was featured in the US &amp; UK app stores for over 6 months.</p>
+          <p><a class="btn btn-default" href="#" role="button">Download</a></p>
+       </div>
+          </div>
+        </div>
+        <div class="col-md-12" style="height:2em;"></div>
+      <!-- Example row of columns -->
+        <div class="col-md-4" style="padding-bottom:2em;">
+          <img src="img/progress1000.png" style="width:100%">
+          <h2>Evening Standard</h2>
+          <p>The Progress 1000 by London Evening Standard is an annual event featuring the 1000 most influential people in London. I created a platform for the app from scratch which is responsive to all sizes of iPhone &amp; iPad, and automatically lays out section pages and paginated profile pages with offline image caching.</p>
+          <p><a class="btn btn-default" href="#" role="button">Download</a></p>
+        </div>
+        <div class="col-md-4" style="padding-bottom:2em;">
+          <img src="img/mapgrounds.png" style="width:100%">
+          <h2>Mapgrounds</h2>
+          <p>Mapgrounds is an app that created beautiful wallpapers for your iPhone, with social sharing and in-app purchases to add new styles.</p>
+          <p><a class="btn btn-default" href="#" role="button">Download</a></p>
+       </div>
+        <div class="col-md-4" style="padding-bottom:2em;">
+          <img src="img/stoic.png" style="width:100%">
+          <h2>Stoic Sleep</h2>
+          <p>Stoic is an app currently in development that is based around sleep therapy, with a platform built for sleep therapists to distribute audio content and sleep-time reminders.</p>
+          <p><a class="btn btn-default disabled" href="#" role="button">Coming Soon</a></p>
+        </div>
+      </div>
+    </section>
     <section class="topBottomMargins" style="background-color:#E0F2F1" id="whatIdo">
     <div class="container">
       <!-- Example row of columns -->
@@ -234,13 +275,13 @@
         <div class="col-md-12">
           <div class="topborder" style="margin-bottom:3em;">
           <h1><strong>What I do</strong></h1>
-          <p>I am a digital designer with development skills. I have designed and coded user interfaces and graphics for multiple apps on the iOS app store, many of which have been featured in Apple's human curated 'New &amp; Noteworthy' section.</p>
+          <p>I am a product designer with development skills. I have designed and coded user interfaces and graphics for multiple apps on the iOS app store, many of which have been featured in Apple's human curated 'New &amp; Noteworthy' section.</p>
         </div>
         <div class="col-md-4">
           <?xml version="1.0" encoding="UTF-8" standalone="no"?>
           <img src="img/GraphicDesign.png" class="center-block">
           <h2>Graphic Design</h2>
-          <p>I have over a decade's experience designing engaging graphics, focused around creating a recognisable visual language for brands that is communicated through logo design and promotional materials. </p>
+          <p>I have many years experience designing engaging graphics, focused around creating a recognisable visual language for brands that is communicated through logo design and promotional materials. </p>
         </div>
         <div class="col-md-4">
           <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -262,51 +303,10 @@
         </div>
       </div>
     </section>
-    <section class="topBottomMargins" id="work">
-      <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-12">
-          <div class="topborder" style="padding-bottom:2em;">
-          <h1><strong>Work</strong></h1>
-          <p>This is a selection of the work that I am proud of, but to find more of my work search the App Store for <strong><i>Daniel Pape</i></strong></p>
-        </div>
-        <div class="col-md-6 backgroundColor">
-          <img src="img/eveAlarm.png" style="width:100%">
-        </div>
-        <div class="col-md-6">
-          <h2>Eve Alarm</h2>
-          <p>I adopt a user-led approach to create engaging, simplified designs that streamline user interactions focused around meeting business goals. </p>
-          <p><a class="btn btn-default" href="#" role="button">Download</a></p>
-       </div>
-          </div>
-        </div>
-        <div class="col-md-12" style="height:2em;"></div>
-      <!-- Example row of columns -->
-        <div class="col-md-4" style="padding-bottom:2em;">
-          <img src="img/progress1000.png" style="width:100%">
-          <h2>Evening Standard</h2>
-          <p>I have over a decade's experience designing engaging graphics, focused around creating a recognisable visual language for brands that is communicated through logo design and promotional materials. </p>
-          <p><a class="btn btn-default" href="#" role="button">Download</a></p>
-        </div>
-        <div class="col-md-4" style="padding-bottom:2em;">
-          <img src="img/mapgrounds.png" style="width:100%">
-          <h2>Mapgrounds</h2>
-          <p>I adopt a user-led approach to create engaging, simplified designs that streamline user interactions focused around meeting business goals. </p>
-          <p><a class="btn btn-default" href="#" role="button">Download</a></p>
-       </div>
-        <div class="col-md-4" style="padding-bottom:2em;">
-          <img src="img/stoic.png" style="width:100%">
-          <h2>Stoic Sleep</h2>
-          <p>I have developed products from idea to release on iOS, Android & the web using native technologies. I am comfortable writing code in swift, objective-C, javascript & java.</p>
-          <p><a class="btn btn-default disabled" href="#" role="button">Coming Soon</a></p>
-        </div>
-      </div>
-    </section>
   <section class="colourBack" id="contact">
 <div class="container">
 
-    <form class="form-horizontal" action="mail.php" method="post"  id="contact_form">
+    <form class="form-horizontal" action="https://formspree.io/danielwpape@gmail.com" method="POST"  id="contact_form">
 <fieldset>
 
 <!-- Form Name -->
@@ -344,15 +344,14 @@
     </div>
   </div>
 </div>
-
 <!-- Success message -->
-<div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
+<div id="success_message"><i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
 
 <!-- Button -->
 <div class="form-group" style="margin-bottom:0px;">
   <label class="col-md-8 control-label"></label>
   <div class="col-md-8">
-    <button type="submit" class="btn btn-default btnBottom" >Send</button>
+    <button type="submit" class="btn btn-default btnBottom" onclick="showMessage()">Send</button>
   </div>
 </div>
   </div>
@@ -371,9 +370,9 @@
       <p><a href="https://www.github.com/danielpape">GitHub</a></p>
     </div>
     <div class="col-md-6">
-      <p><a href="#">Eve Alarm <i>App Store</i></a></p>
-      <p><a href="#">Evening Standard: Progress 1000 <i>App Store</i></a></p>
-      <p><a href="#">Mapgrounds <i>App Store</i></a></p>
+      <p><a href="https://itunes.apple.com/gb/app/eve-alarm-time-to-sleep/id633081958?mt=8">Eve Alarm <i>App Store</i></a></p>
+      <p><a href="https://itunes.apple.com/us/app/progress-1000-by-london-evening/id931391607?mt=8">Evening Standard: Progress 1000 <i>App Store</i></a></p>
+      <p><a href="https://itunes.apple.com/gb/app/mapgrounds/id792151906?mt=8">Mapgrounds <i>App Store</i></a></p>
    </div>
       </div>
     </div>
@@ -388,128 +387,5 @@
     <script src="../js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../js/ie10-viewport-bug-workaround.js"></script>
-    <script>
-    $(document).ready(function() {
-$('#contact_form').bootstrapValidator({
-  // To use feedback icons, ensure that you use Bootstrap v3.1.0 or later
-  feedbackIcons: {
-      valid: 'glyphicon glyphicon-ok',
-      invalid: 'glyphicon glyphicon-remove',
-      validating: 'glyphicon glyphicon-refresh'
-  },
-  fields: {
-      first_name: {
-          validators: {
-                  stringLength: {
-                  min: 2,
-              },
-                  notEmpty: {
-                  message: 'Please supply your first name'
-              }
-          }
-      },
-       last_name: {
-          validators: {
-               stringLength: {
-                  min: 2,
-              },
-              notEmpty: {
-                  message: 'Please supply your last name'
-              }
-          }
-      },
-      email: {
-          validators: {
-              notEmpty: {
-                  message: 'Please supply your email address'
-              },
-              emailAddress: {
-                  message: 'Please supply a valid email address'
-              }
-          }
-      },
-      phone: {
-          validators: {
-              notEmpty: {
-                  message: 'Please supply your phone number'
-              },
-              phone: {
-                  country: 'US',
-                  message: 'Please supply a vaild phone number with area code'
-              }
-          }
-      },
-      address: {
-          validators: {
-               stringLength: {
-                  min: 8,
-              },
-              notEmpty: {
-                  message: 'Please supply your street address'
-              }
-          }
-      },
-      city: {
-          validators: {
-               stringLength: {
-                  min: 4,
-              },
-              notEmpty: {
-                  message: 'Please supply your city'
-              }
-          }
-      },
-      state: {
-          validators: {
-              notEmpty: {
-                  message: 'Please select your state'
-              }
-          }
-      },
-      zip: {
-          validators: {
-              notEmpty: {
-                  message: 'Please supply your zip code'
-              },
-              zipCode: {
-                  country: 'US',
-                  message: 'Please supply a vaild zip code'
-              }
-          }
-      },
-      comment: {
-          validators: {
-                stringLength: {
-                  min: 10,
-                  max: 200,
-                  message:'Please enter at least 10 characters and no more than 200'
-              },
-              notEmpty: {
-                  message: 'Please supply a description of your project'
-              }
-              }
-          }
-      }
-  })
-  .on('success.form.bv', function(e) {
-      $('#success_message').slideDown({ opacity: "show" }, "slow") // Do something ...
-          $('#contact_form').data('bootstrapValidator').resetForm();
-
-      // Prevent form submission
-      e.preventDefault();
-
-      // Get the form instance
-      var $form = $(e.target);
-
-      // Get the BootstrapValidator instance
-      var bv = $form.data('bootstrapValidator');
-
-      // Use Ajax to submit form data
-      $.post($form.attr('action'), $form.serialize(), function(result) {
-          console.log(result);
-      }, 'json');
-  });
-});
-</script>
   </body>
 </html>
